@@ -1,3 +1,6 @@
+[B]2.0.11[/B]
+- Fixed: Episode List changes
+
 [B]2.0.10[/B]
 - Fixed: artwork won't be scraped (again)
 - Fixed: Episode director/guest star mix-ups
